force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/CC_Grupo_Colaborador_Contact__c.object-meta.xml
<CustomObject>
    <label>Colaborador</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Colaborador Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Colaboradores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>