force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Apellidos__c.field-meta.xml
<CustomField>
    <fullName>CC_Apellidos__c</fullName>
    <formula>IF( ISBLANK( CC_Contacto__c ) ,  CC_Usuario__r.LastName ,  CC_Contacto__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellidos</label>
    <type>Text</type>
</CustomField>