force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Colaborador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colaborador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Colaboradores</relationshipLabel>
    <relationshipName>Colaboradores</relationshipName>
    <type>Lookup</type>
</CustomField>