force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <formula>IF( ISBLANK( CC_Contacto__c ) ,  CC_Usuario__r.Email ,  CC_Contacto__r.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>