force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Grupo_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>CC_Grupo_Colaborador__c</fullName>
    <label>Grupo colaborador</label>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Colaboradores</relationshipLabel>
    <relationshipName>Colaboradores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>