force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Nombre__c.field-meta.xml
<CustomField>
    <fullName>CC_Nombre__c</fullName>
    <formula>IF( ISBLANK(CC_Contacto__c) ,  CC_Usuario__r.FirstName ,  CC_Contacto__r.FirstName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre</label>
    <type>Text</type>
</CustomField>