force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Para_CC__c.field-meta.xml
<CustomField>
    <fullName>CC_Para_CC__c</fullName>
    <label>Para/CC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Para</fullName>
                <default>true</default>
                <label>Para</label>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>No enviar</fullName>
            </value>
            <value>
                <fullName>Solo reclamación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>