force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Predeterminado__c.field-meta.xml
<CustomField>
    <fullName>CC_Predeterminado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grupo Máximo predeterminado</description>
    <inlineHelpText>Grupo Máximo predeterminado</inlineHelpText>
    <label>Grupo predeterminado</label>
    <type>Checkbox</type>
</CustomField>