force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Reclamacion_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Reclamacion_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para poder marcar si el contacto o usuario van en copia de la segunda reclamación automática.</description>
    <label>Reclamación 2</label>
    <type>Checkbox</type>
</CustomField>