force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Secuencia__c.field-meta.xml
<CustomField>
    <fullName>CC_Secuencia__c</fullName>
    <description>Secuencia del usuario para los grupos de Máximo</description>
    <inlineHelpText>Secuencia del usuario para los grupos de Máximo</inlineHelpText>
    <label>Secuencia</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>