force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/CC_Usuario__c.field-meta.xml
<CustomField>
    <fullName>CC_Usuario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Email</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Colaboradores</relationshipName>
    <type>Lookup</type>
</CustomField>