force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/SAC_Administrador__c.field-meta.xml
<CustomField>
    <fullName>SAC_Administrador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrador</label>
    <type>Checkbox</type>
</CustomField>