force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/SAC_Auditor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Auditor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para saber si el colaborador del grupo puede realizar auditorias</description>
    <label>Auditor</label>
    <type>Checkbox</type>
</CustomField>