force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/SAC_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>SAC_Supervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para informar si el usuario que pertenece al grupo es supervisor.</description>
    <label>Supervisor</label>
    <type>Checkbox</type>
</CustomField>