force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/SEG_MyUser2__c.field-meta.xml
<CustomField>
    <fullName>SEG_MyUser2__c</fullName>
    <formula>IF(CC_Usuario__c = $User.Id , TRUE , FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyUser2</label>
    <type>Checkbox</type>
</CustomField>