force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/fields/SEG_TipodeAcceso__c.field-meta.xml
<CustomField>
    <fullName>SEG_TipodeAcceso__c</fullName>
    <label>Tipo de Acceso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lectura</fullName>
            </value>
            <value>
                <fullName>Escritura</fullName>
            </value>
            <value>
                <fullName>Privado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>