force-app/main/default/objects/CC_Grupo_Colaborador_Contact__c/validationRules/CC_Contacto_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Contacto_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_Contacto__c ) != CC_Contacto__c &amp;&amp;
CC_Contacto__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorMessage>El contacto seleccionado no debe estar marcado como inactivo.</errorMessage>
</ValidationRule>